--- a/index.html
+++ b/index.html
@@ -269,8 +269,7 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
 
 <!-- Accomodations Section -->
     <section id="accommodations" class="thingstodo-section content-section">
-        <div class="row container">
-            <div class="col-lg-8 col-lg-offset-2">
+        <div class="container">
               <center>
 <h1>Accommodations</h1>
 <h3>Whitefish Mountain Resort</h3>
@@ -294,8 +293,7 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
     <p>TAXI SERVICE
       <br>Glacier Taxi<i>(serving the Whitefish area)</i> (406) 250-3603 | Arrow Shuttle <i>(resort, airport shuttle, and taxi service)</i> (406) 300-2301</p>
 </center>
-</div>
-</div>  <!-- end of row -->
+ <!-- end of row -->
 </div>
 
 </section>
