--- a/index.html
+++ b/index.html
@@ -270,6 +270,8 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
 <!-- Accomodations Section -->
     <section id="accommodations" class="thingstodo-section content-section">
         <div class="container">
+          <div class="row">
+            <div class="col-sm-12"
               <center>
 <h1>Accommodations</h1>
 <h3>Whitefish Mountain Resort</h3>
@@ -294,6 +296,8 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
       <br>Glacier Taxi<i>(serving the Whitefish area)</i> (406) 250-3603 | Arrow Shuttle <i>(resort, airport shuttle, and taxi service)</i> (406) 300-2301</p>
 </center>
  <!-- end of row -->
+</div>
+</div>
 </div>
 
 </section>
