--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
     <section id="accommodations" class="thingstodo-section content-section">
         <div class="container">
           <div class="row">
-            <div class="col-sm-12"
+            <div class="col-sm-12">
               <center>
 <h1>Accommodations</h1>
 <h3>Whitefish Mountain Resort</h3>
