--- a/index.html
+++ b/index.html
@@ -208,23 +208,27 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
             <div class="col-md-6">
               <h2>Whitefish Mountain Resort</h2>
               <p>
-                <b>Zip Line Tours</b>
-                <br>Soar high above ski slopes, over ravines and through the trees on Montana’s longest zip line tour. Experience more than a mile of flying on seven separate lines stretching as long as 1,900 ft. across and up to 300 ft. above the forest floor. Tours are led by two guides who ensure that each flyer is soundly secured for each flight and who facilitate fun from start to finish.                <br><br>
-                <b>Aerial Adventure Park</b>
-                <br>We call it “the happy place” because we see so many people overjoyed with excitement and a sense of accomplishment here. We also call it “an obstacle course in the trees” because there are five courses of various ability levels, each featuring different elements for getting from tree to tree. Traverse from tree to tree by crossing cable bridges, climbing rope ladders, swinging on a trapeze and more. The park is a great activity for families, friends and team building.                <br><br>
-                <b>Summit Nature Center</b>
-                <br>A must do for families at the summit is to visit the Summit Nature Center. Operated and staffed by the Flathead National Forest, families love to visit the Summit Nature Center to learn about our forest and its local flora and fauna.                <br><br>
-                <b>Mountain Biking</b>
-                <br>Ride more than 30 miles of lift-accessed and cross-country mountain bike trails above the Flathead Valley.
-                <br>In Whitefish, we go with the flow. Our laid back vibe is one of the reasons why people keep coming back. That and the other relaxing characteristics: our lazy meandering river, pours of locally-brewed beers and community full of easy-going locals. Even our bike trails have flow. It's a term that often describes mountain bike trails. The way they are carved into a mountain in harmony with its contours for a smooth ride so you can, well, go with the flow.
+                <b><a href="http://skiwhitefish.com/zip-line-tours/">Zip Line Tours</a></b>
+                <br>Soar high above ski slopes, over ravines and through the trees on Montana’s longest zip line tour. Experience more than a mile of flying on seven separate lines stretching as long as 1,900 ft. across and up to 300 ft. above the forest floor. Tours are led by two guides who ensure that each flyer is soundly secured for each flight and who facilitate fun from start to finish.
                 <br><br>
-                <b>Alpine Slide</b>
-                <br>Take sliding to a whole new level on the Alpine Slide. Ride a sled one-third mile down dips, around banked turns, under bridges, and through a tunnel while controlling speed with a hand brake. Each lap down the slide includes a free chairlift on Chair 6 back to the top of the slide. The Alpine Slide is fun for all ages, from 1 to 101.                <br><br>
-                <b>Scenic Lift Rides</b>
+                <b><a href="http://skiwhitefish.com/aerial-adventure-park/">Aerial Adventure Park</a></b>
+                <br>They call it “the happy place” because they see so many people overjoyed with excitement and a sense of accomplishment here. They also call it “an obstacle course in the trees” because there are five courses of various ability levels, each featuring different elements for getting from tree to tree. Traverse from tree to tree by crossing cable bridges, climbing rope ladders, swinging on a trapeze and more. The park is a great activity for families and friends.
+                <br><br>
+                <b><a href="http://skiwhitefish.com/summit-nature-center/">Summit Nature Center</a></b>
+                <br>A must do for families at the summit is to visit the Summit Nature Center. Operated and staffed by the Flathead National Forest, families love to visit the Summit Nature Center to learn about our forest and its local flora and fauna.
+                <br><br>
+                <b><a href="http://skiwhitefish.com/mountain-biking/">Mountain Biking</a></b>
+                <br>Ride more than 30 miles of lift-accessed and cross-country mountain bike trails above the Flathead Valley.
+                <br><br>In Whitefish, they go with the flow. Their laid back vibe is one of the reasons why people keep coming back. That and the other relaxing characteristics: the lazy meandering river, pours of locally-brewed beers and community full of easy-going locals. Even the bike trails have flow. It's a term that often describes mountain bike trails. The way they are carved into a mountain in harmony with its contours for a smooth ride so you can, well, go with the flow.
+                <br><br>
+                <b><a href="http://skiwhitefish.com/alpine-slide/">Alpine Slide</a></b>
+                <br>Take sliding to a whole new level on the Alpine Slide. Ride a sled one-third mile down dips, around banked turns, under bridges, and through a tunnel while controlling speed with a hand brake. Each lap down the slide includes a free chairlift on Chair 6 back to the top of the slide. The Alpine Slide is fun for all ages, from 1 to 101.
+                <br><br>
+                <b><a href="http://skiwhitefish.com/scenic-lift-rides/">Scenic Lift Rides</a></b>
                 <br>Ranked #1 among Whitefish attractions on Trip Advisor, Scenic Lift Rides are a must-do in the summer. Choose from an enclosed gondola or an open chairlift, then sit back and enjoy the mountain scenery as well as views of Whitefish Lake, the Flathead Valley and Glacier National Park on the ride to the summit. Once at the summit, enjoy 360-degree views before returning down the mountain, or spend some time at the Summit House in the full cafeteria-style restaurant and bar or in the Summit Nature Center.
                 <br><br>
-                <b>Hiking</b>
-                <br>Whether you are looking for a multi-hour trek or an unhurried wander in the woods, our trails offer a mountain adventure for you and your troop. Hiking trails are located at different elevations on the mountain with trailheads at the summit, in the village and at the Base Lodge.
+                <b><a href="http://skiwhitefish.com/hiking/">Hiking</a></b>
+                <br>Whether you are looking for a multi-hour trek or an unhurried wander in the woods, their trails offer a mountain adventure for you and your troop. Hiking trails are located at different elevations on the mountain with trailheads at the summit, in the village and at the Base Lodge.
               </p>
             </div>
             <div class="col-md-6">
@@ -232,7 +236,7 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
               <p>
                 <b>Entrance Fees</b>
                 <br>Entrance fee by car (7 day permit): $35.00; entrance fee by single entry - $20.00
-                <br><br><b>Visitor Centers</b>
+                <br><br><b><a href="https://www.nps.gov/glac/planyourvisit/visitor-centers.htm">Visitor Centers</a></b>
                 <br><i>Apgar Visitor Center</i>
                 <br>
                 Apgar Visitor Center is located 2 miles east of the West Glacier entrance to the park. Rangers are on duty to assist with trip planning. The visitor center is the hub for the Going-to-the-Sun Road free shuttle system on the west side of the park.
@@ -243,21 +247,21 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
                 <br>
                 The St. Mary Visitor Center is located just inside the east entrance of the park near the community of St. Mary, Montana. A park film is shown throughout the day. Exhibits highlight the rich Native American history associated with Glacier National Park.
                 <br><br>
-                <b>Hiking the Trails</b>
+                <b><a href="https://www.nps.gov/glac/planyourvisit/hikingthetrails.htm">Hiking the Trails</a></b>
                 <br>With 734 miles to choose from, there is something for everyone. Use these resources to pick what hike is right for. Link includes trail maps.
                 <br><br>
-                <b>Ranger-led Programs</b>
+                <b><a href="https://www.nps.gov/glac/planyourvisit/ranger-led-activities.htm">Ranger-led Programs</a></b>
                 <br>Scheduled activities include a variety of ranger-led programs, from easy walks and evening talks, to all-day hikes and boat tours.
-                <br><br><b>Guided Tours</b>
+                <br><br><b><a href="https://www.nps.gov/glac/planyourvisit/guidedtours.htm">Guided Tours</a></b>
                 <br>Rangers are not the only naturalists that lead groups in the park. Check out the tour options offered by park concessions.
-                <br><br><b>Going-to-the-sun Road</b>
+                <br><br><b><a href="https://www.nps.gov/glac/planyourvisit/goingtothesunroad.htm">Going-to-the-sun Road</a></b>
                 <br>A quintessential part of any Glacier visit, Going-to-the-Sun Road connects the east and west sides through the middle of the park.
-                <br><br><b>Camping, Biking, and Fishing</b>
+                <br><br><b><a href="https://www.nps.gov/glac/planyourvisit/camping.htm">Camping</a>, <a href="https://www.nps.gov/glac/planyourvisit/bicycling.htm">Biking</a>, and <a href="https://www.nps.gov/glac/planyourvisit/fishing.htm">Fishing</a></b>
                 <br>Enjoy the crackling of a campfire and sleep under the stars. With 13 campgrounds and 1,009 sites to choose from, options are plentiful.
                 <br><br>Learn the rules for biker access on Going-to-the-Sun Road and other opportunities available to cyclists.
                 <br><br>No license is needed to fish in the park, but you do need to know the many rules and limits, which vary with each body of water.
-                <br><br>Read Things to do in Glacier with children (pdf) to find out about family friendly trails and to get more ideas about activities children might enjoy while in Glacier.
-                <br><br>Visit the Glacier Institute website to find out about their summer family programs and summer camps for children.
+                <br><br>Read <a href="https://www.nps.gov/glac/learn/kidsyouth/upload/Things%20to%20do%20in%20Glacier%20with%20kids%20for%20web.pdf"><i>things to do in Glacier with children (pdf)</i></a> to find out about family friendly trails and to get more ideas about activities children might enjoy while in Glacier.
+                <br><br>Visit <a href="https://www.glacierinstitute.org/">the Glacier Institute website</a> to find out about their summer family programs and summer camps for children.
 </font>
               </p>
             </div>
@@ -279,7 +283,7 @@ If you have any questions about the wedding, feel free to send <a href="mailto:a
 <p>Resort accommodations are available in all sizes and types from luxurious townhomes and private residences to cozy cabins and condominiums. Any of the Vacation Planners can assist you, whether you’ve decided on a specific property or building, or would like for them to discuss some options with you.  Mention your promo code, which is BrandonWexler to receive 15% off OR you may also book on-line by visiting skiwhitefish.com, and entering this same promo code.  The promo code cannot be used online until 2019. You may call the phone number listed above to be notified when booking for summer 2019 become available.
   <br><br>Please book your accommodations in the main village area, which includes the Morning Eagle Lodge and the Kintla Lodge.
 
-  <h3>Other Loding Options</h3>
+  <h3>Other Lodging Options</h3>
   <p>Best Western Rocky Mountain Lodge | Hampton Inn & Suites Whitefish | Pine Lodge | Airbnb
   <br><br><i>*Please note, you may need a rental car for ceremony and reception by choosing other accommodations.</i>
 
