--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <a class="page-scroll" href="#weddingdetails">Wedding Details</a>
                     </li>
                                                                       <li>
-                        <a class="page-scroll" href="#destinationwedding">Why a Destination Wedding</a>
+                        <a class="page-scroll" href="#destinationwedding">Why Montana</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#RSVP">RSVP</a>
