--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
                     <p><b>WHITEFISH MOUNTAIN RESORT</b>
                     <br>1015 Glades Dr, Whitefish, MT 59937, USA
                     <br><br>Guests will arrive by chairlift or enclosed gondola to the mountaintop ceremony at Whitefish Mountain Resort's summit, which offers views of the entire Flathead Valley. Indoor reception to follow at Base Lodge.
-                    <br><br>We invite you to be fully present with us during our ceremony and ask that you please turn off all cell phones and cameras.              </div>
+                    <br><br>We invite you to be fully present with us during our ceremony and ask that you please turn off all cell phones and cameras.              
+                    <br><br><a href="/weddingitinerary.pdf">Click here</a> to view a printable version of the Timeline of Events.
+                </div>
             </div>
         </div>
     </section>
